--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "WEB API I Challenge",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon index.js"
+    "server": "nodemon index.js",
+    "start" : "node index.js"
   },
   "repository": {
     "type": "git",
@@ -20,7 +21,8 @@
     "nodemon": "^1.19.4"
   },
   "dependencies": {
-    "knex": "^0.20.0",
+    "express": "^4.17.1",
+    "knex": "^0.20.1",
     "sqlite3": "^4.1.0"
   }
 }
